--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,4 +74,10 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  /** theme app **/
+  --ion-background-color: #4A538E;
+  --ion-text-color: #f4f5f8;
+  --ion-toolbar-background: #4A538E;
+  --ion-font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Roboto", sans-serif;
 }
