--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,76 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Ionic Blank
+      MEU CARTÃO
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+  <div class="ion-padding ion-text-center">
+    Insira seus dados para gerar seu cartão de visita.
   </div>
+  <ion-card color="primary">
+    <ion-card-content>
+      <ion-avatar>
+        <img>
+      </ion-avatar>
+      
+      <ion-item class="ion-padding-bottom">
+        <ion-label position="stacked">Nome *</ion-label>
+        <ion-input></ion-input>
+      </ion-item>
+
+      <ion-item class="ion-padding-bottom">
+        <ion-label position="stacked">Sobrenome *</ion-label>
+        <ion-input></ion-input>
+      </ion-item>
+
+      <ion-item class="ion-padding-bottom">
+        <ion-label position="stacked">Endereço Comercial *</ion-label>
+        <ion-input></ion-input>
+      </ion-item>
+
+      <ion-item class="ion-padding-bottom">
+        <ion-label position="stacked">Número *</ion-label>
+        <ion-input></ion-input>
+      </ion-item>
+
+      <ion-item class="ion-padding-bottom">
+        <ion-label position="stacked">Complemento</ion-label>
+        <ion-input></ion-input>
+      </ion-item>
+
+      <ion-item class="ion-padding-bottom">
+        <ion-label position="stacked">CEP *</ion-label>
+        <ion-input></ion-input>
+      </ion-item>
+
+      <ion-item class="ion-padding-bottom">
+        <ion-label position="stacked">Cidade *</ion-label>
+        <ion-input></ion-input>
+      </ion-item>
+
+      <ion-item class="ion-padding-bottom">
+        <ion-label position="stacked">UF *</ion-label>
+        <ion-input></ion-input>
+      </ion-item>
+
+      <ion-item class="ion-padding-bottom">
+        <ion-label position="stacked">Tel. Comercial *</ion-label>
+        <ion-input></ion-input>
+      </ion-item>
+
+      <ion-item class="ion-padding-bottom">
+        <ion-label position="stacked">Tel. Celular</ion-label>
+        <ion-input></ion-input>
+      </ion-item>
+
+      <ion-item class="ion-padding-bottom"  >
+        <ion-label position="stacked">E-mail *</ion-label>
+        <ion-input></ion-input>
+      </ion-item>
+
+    </ion-card-content>
+  </ion-card>
 </ion-content>
