--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -6,11 +6,11 @@
 
   /** primary **/
   --ion-color-primary: #3b4781;
-  --ion-color-primary-rgb: 56, 128, 255;
+  --ion-color-primary-rgb: 59, 71, 129;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary-shade: #222E68;
+  --ion-color-primary-tint: #5E699D;
 
   /** secondary **/
   --ion-color-secondary: #0cd1e8;
