--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -15,3 +15,11 @@ ion-grid, .end-col {
     padding-top: 0;
     padding-bottom: 0;
 }
+
+.labelCheckbox {
+    font-size: 12px;
+}
+
+ion-checkbox {
+    margin-right: 10px;
+}
