--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -43,10 +43,10 @@
 
         <ion-grid>
           <ion-row>
-            <ion-col>
-              <ion-item no-lines>
+            <ion-col offset="3">
+              <ion-item lines="none">
                 <ion-checkbox></ion-checkbox>
-                <ion-label>Usar foto de perfil</ion-label>
+                <ion-label class="labelCheckbox">Usar foto de perfil</ion-label>
               </ion-item>
             </ion-col>
           </ion-row>
@@ -76,7 +76,7 @@
             <ion-col size="5" class="start-col">
               <ion-item>
                 <ion-label position="stacked">CEP *</ion-label>
-                <ion-input [brmasker]="{mask:'00.000-000', len:10}" maxlength="10"></ion-input>
+                <ion-input formControlName="zipCode" [brmasker]="{form: userForm.get('zipCode'), mask:'00.000-000', len:10}" maxlength="10"></ion-input>
               </ion-item>
             </ion-col>
             <ion-col size="4" class="start-col">
@@ -96,14 +96,14 @@
             <ion-col class="start-col">
               <ion-item>
                 <ion-label position="stacked">Tel. Comercial *</ion-label>
-                <ion-input type="text" [brmasker]="{phone: true, len: 10}" maxlength="14"></ion-input>
+                <ion-input type="text" formControlName="phone" [brmasker]="{form: userForm.get('phone'), phone: true, len: 10}" maxlength="14"></ion-input>
               </ion-item>
             </ion-col>
             <ion-col class="end-col">
               <ion-item>
                 <ion-label position="stacked">Tel. Celular</ion-label>
-                <ion-input [brmasker]="{phone: true, len: 11}" maxlength="15"></ion-input>
-              </ion-item>          
+                <ion-input formControlName="cellphone" [brmasker]="{form: userForm.get('cellphone'), phone: true, len: 11}" maxlength="15"></ion-input>
+              </ion-item>
             </ion-col>
           </ion-row>
         </ion-grid>
@@ -119,7 +119,7 @@
               * Campos obrigatórios
             </ion-col>
             <ion-col class="start-col">
-              <ion-button type="submit" fill="outline" color="secondary"  end>GERAR</ion-button>
+              <ion-button type="submit" fill="outline" color="secondary">GERAR</ion-button>
             </ion-col>
           </ion-row>
         </ion-grid>
