--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -13,12 +13,12 @@
   --ion-color-primary-tint: #5E699D;
 
   /** secondary **/
-  --ion-color-secondary: #F4F5F8;
-  --ion-color-secondary-rgb: 244, 245, 248;
+  --ion-color-secondary: #09345c;
+  --ion-color-secondary-rgb: 9, 53, 92;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #D7DBE7;
-  --ion-color-secondary-tint: #ffffff;
+  --ion-color-secondary-shade: #032544;
+  --ion-color-secondary-tint: #184771;
 
   /** tertiary **/
   --ion-color-tertiary: #7044ff;
