Improve form css

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,3 +1,35 @@
+ion-title {
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.textInfo {
+    font-size: 15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.checkbox-col {
+    padding-top: 0;
+    margin-bottom: 10px;
+}
+
+.checkbox-item {
+    --background: #3b4781;
+}
+
+ion-checkbox {
+    --border-color: #f4f5f8;
+}
+
+.name-col {
+    padding-bottom: 0;
+}
+
+ion-card-content {
+    padding: 5px;
+}
+
 ion-button {
     --border-radius: 2px;
 }
