--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,7 +3,7 @@
     <ion-title>
       MEU CARTÃO
     </ion-title>
-    <ion-item  slot="end" no-lines>
+    <ion-item  slot="end" lines="none">
       <ion-avatar>
         <img src="assets/imgs/emptyAvatar.png">
       </ion-avatar>
@@ -12,7 +12,7 @@
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding ion-text-center">
+  <div class="textInfo ion-padding ion-text-center">
     Insira seus dados para gerar seu cartão de visita.
   </div>
   <ion-card color="primary">
@@ -26,47 +26,42 @@
                 <img src="assets/imgs/emptyAvatar.png">
               </ion-avatar>
             </ion-col>
-            <ion-col>
-              <ion-item>
-                <ion-label position="stacked">Nome *</ion-label>
-                <ion-input type="text" formControlName="name"></ion-input>
+            <ion-col class="name-col">
+              <ion-item lines="none">
+                <!-- <ion-label position="stacked">Nome *</ion-label> -->
+                <ion-input type="text" placeholder="Nome *" formControlName="name"></ion-input>
               </ion-item>
       
-              <ion-item>
-                <ion-label position="stacked">Sobrenome *</ion-label>
-                <ion-input type="text" formControlName="lastName"></ion-input>
+              <ion-item lines="none">
+                <!-- <ion-label position="stacked">Sobrenome *</ion-label> -->
+                <ion-input type="text" placeholder="Sobrenome *" formControlName="lastName"></ion-input>
               </ion-item>
       
             </ion-col>
           </ion-row>
-        </ion-grid>
-
-        <ion-grid>
           <ion-row>
-            <ion-col offset="3">
-              <ion-item lines="none">
+            <ion-col class="checkbox-col" offset="3.3" color="primary">
+              <ion-item class="checkbox-item" lines="none">
                 <ion-checkbox></ion-checkbox>
                 <ion-label class="labelCheckbox">Usar foto de perfil</ion-label>
               </ion-item>
             </ion-col>
           </ion-row>
-        </ion-grid>
 
-        <ion-item>
+        <ion-item lines="none">
           <ion-label position="stacked">Endereço Comercial *</ion-label>
           <ion-input type="text" formControlName="address"></ion-input>
         </ion-item>
 
-        <ion-grid>
           <ion-row>
             <ion-col class="start-col">
-              <ion-item>
+              <ion-item lines="none">
                 <ion-label position="stacked">Número *</ion-label>
                 <ion-input type="number" formControlName="addressNumber"></ion-input>
               </ion-item>
             </ion-col>
             <ion-col class="end-col">
-                <ion-item>
+                <ion-item lines="none">
                   <ion-label position="stacked">Complemento</ion-label>
                   <ion-input type="text" formControlName="complement"></ion-input>
                 </ion-item>
@@ -74,19 +69,19 @@
           </ion-row>
           <ion-row>
             <ion-col size="5" class="start-col">
-              <ion-item>
+              <ion-item lines="none">
                 <ion-label position="stacked">CEP *</ion-label>
                 <ion-input type="text" formControlName="zipCode" [brmasker]="{form: userForm.get('zipCode'), mask:'00.000-000', len:10}" maxlength="10"></ion-input>
               </ion-item>
             </ion-col>
             <ion-col size="4" class="start-col">
-              <ion-item>
+              <ion-item lines="none">
                 <ion-label position="stacked">Cidade *</ion-label>
                 <ion-input type="text" formControlName="city"></ion-input>
               </ion-item>
             </ion-col>
             <ion-col class="end-col">
-              <ion-item>
+              <ion-item lines="none">
                 <ion-label position="stacked">UF *</ion-label>
                 <ion-input type="text" formControlName="uf" maxlength="2"></ion-input>
               </ion-item>
@@ -94,32 +89,30 @@
           </ion-row>
           <ion-row>
             <ion-col class="start-col">
-              <ion-item>
+              <ion-item lines="none">
                 <ion-label position="stacked">Tel. Comercial *</ion-label>
                 <ion-input type="tel" formControlName="phone" [brmasker]="{form: userForm.get('phone'), phone: true, len: 10}" maxlength="14"></ion-input>
               </ion-item>
             </ion-col>
             <ion-col class="end-col">
-              <ion-item>
+              <ion-item lines="none">
                 <ion-label position="stacked">Tel. Celular</ion-label>
                 <ion-input type="tel" formControlName="cellphone" [brmasker]="{form: userForm.get('cellphone'), phone: true, len: 11}" maxlength="15"></ion-input>
               </ion-item>
             </ion-col>
           </ion-row>
-        </ion-grid>
 
-        <ion-item>
+        <ion-item lines="none">
           <ion-label position="stacked">E-mail *</ion-label>
           <ion-input type="email" formControlName="email"></ion-input>
         </ion-item>
 
-        <ion-grid>
           <ion-row>
             <ion-col class="start-col">
               * Campos obrigatórios
             </ion-col>
             <ion-col class="start-col">
-              <ion-button type="submit" fill="outline" color="secondary">GERAR</ion-button>
+              <ion-button type="submit" fill="outline" color="light">GERAR</ion-button>
             </ion-col>
           </ion-row>
         </ion-grid>
