Improve form scss

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -21,7 +21,7 @@
         
         <ion-grid>
           <ion-row>
-            <ion-col size="4">
+            <ion-col size="3.5">
               <ion-avatar>
                 <img src="assets/imgs/emptyAvatar.png">
               </ion-avatar>
@@ -40,7 +40,7 @@
             </ion-col>
           </ion-row>
           <ion-row>
-            <ion-col class="checkbox-col" offset="3.3" color="primary">
+            <ion-col class="checkbox-col" offset="3" color="primary">
               <ion-item class="checkbox-item" lines="none">
                 <ion-checkbox></ion-checkbox>
                 <ion-label class="labelCheckbox">Usar foto de perfil</ion-label>
@@ -108,11 +108,11 @@
         </ion-item>
 
           <ion-row>
-            <ion-col class="start-col">
+            <ion-col size="7.9" class="start-col requiredMessage">
               * Campos obrigatórios
             </ion-col>
             <ion-col class="start-col">
-              <ion-button type="submit" fill="outline" color="light">GERAR</ion-button>
+                <ion-button type="submit" fill="outline" color="light">GERAR</ion-button>
             </ion-col>
           </ion-row>
         </ion-grid>
