--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -55,3 +55,12 @@ ion-grid, .end-col {
 ion-checkbox {
     margin-right: 10px;
 }
+
+ion-button {
+    font-size: 12px;
+}
+
+.requiredMessage {
+    margin-top: 5px;
+    font-size: 12px;
+}
